修复：draw方法返回以及文档

--- a/src/group/baseGroup.less
+++ b/src/group/baseGroup.less
@@ -20,5 +20,12 @@
       background: rgba(0, 0, 0, 0.1);
       border-radius: 0 0 9px 9px;
     }
+    .group-icon-resize {
+      position: absolute;
+      right: -4px;
+      bottom: -8px;
+      color: #666;
+      cursor: se-resize;
+    }
   }
 }
