新增：扩大线条交互区域 & 实体更新事件

--- a/src/edge/baseEdge.less
+++ b/src/edge/baseEdge.less
@@ -11,3 +11,9 @@
   stroke: #B9B9B9;
   stroke-width: 1px;
 }
+
+.butterflies-link-event-handler {
+  stroke-width: 12px;
+  fill: none;
+  stroke: none;
+}
