--- a/src/canvas/baseCanvas.less
+++ b/src/canvas/baseCanvas.less
@@ -21,13 +21,14 @@
   position: relative;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .butterfly-svg {
   overflow: visible!important;
 }
 
-.butterfly-canvas-warpper{
+.butterfly-selected-canvas{
   position: absolute;
   top: 0;
   left: 0;
@@ -38,5 +39,30 @@
   &.warpper-up {
     z-index: 999;
     display: block;
+  }
+}
+
+.butterfly-gird-canvas-warpper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  .butterfly-gird-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  .butterfly-guideline-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
   }
 }
