--- a/src/canvas/baseCanvas.less
+++ b/src/canvas/baseCanvas.less
@@ -41,17 +41,17 @@
     display: block;
   }
 }
-.endpoint-tips-menu{
+.butterfly-tips-menu{
   position: fixed;
   background: #fff;
   z-index: 1000;
   min-width: 220px;
   border-radius: 3px;
-  .endpoint-tips-menu-title{
+  .tips-menu-title{
     padding: 3px 10px;
     border-bottom: 1px solid #dcdcdc
   }
-  .endpoint-tips-menu-content{
+  .tips-menu-content{
     padding: 3px 10px;
    .yellow-point{
       background: yellowgreen;
@@ -63,7 +63,7 @@
     }
   }
 }
-.node-menu, .label-menu {
+.butterfly-node-menu{
   position: fixed;
   min-width: 90px;
   background-color: #fff;
@@ -97,21 +97,6 @@
   .node-menu-item:hover{
      background: #00C1DE;
      color: #fff;
-  }
-  &.dag-node-menu{
-    padding: 3px 0;
-    border-bottom: 1px solid #DCDCDC;
-    .node-menu-item{
-      text-align: left;
-      padding: 3px 10px 3px 10px;
-      cursor: pointer; 
-      width: auto;
-      min-width: 90px;
-      height: 24px;
-    }
-    .node-menu-item:last-child{
-      border-bottom: none;
-   }
   }
 }
 .butterfly-gird-canvas {
