add babel plugin & fix docs

--- a/example/demo/emergency/index.less
+++ b/example/demo/emergency/index.less
@@ -46,7 +46,7 @@
     stroke: #8f8f8f;
   }
   .purple {
-    borde-width: 2px;
+    border-width: 2px;
     border-color: #776ef3;
     color: #776ef3;
     stroke: #776ef3;
