--- a/src/canvas/baseCanvas.less
+++ b/src/canvas/baseCanvas.less
@@ -7,7 +7,7 @@
 
 .butterfly-svg {
   position: relative;
-  pointer-events: none;
+  pointer-events: auto!important;
   overflow: visible!important;
 }
 
