--- a/example/demo/liteGraph/index.less
+++ b/example/demo/liteGraph/index.less
@@ -50,44 +50,43 @@
         vertical-align: middle;
         border-bottom:1px solid #000000;
       }
-      .re_grayPoint{
+      .custom-gray-point{
         position: absolute;
         width: 12px;
         height: 12px;
         border-radius: 50%;
         border: 1px solid #000000;
         background: #828f9c;
-        &.re_input_point_3 {
-          right: 4px;
-          top: calc(~ "50% - 6px");
-        }
-        &.re_input_point_2{
+        &.game-point_2{
           right: 4px;
           top: calc(~ "68% - 10px");
         }
-
+        &.game-point_3 {
+          right: 4px;
+          top: calc(~ "50% - 6px");
+        }
       }
-      .re_greenPoint{
+      .custom-green-rectangle-point{
         position: absolute;
         width: 15px;
         height: 10px;
         background: #55ea55;
-        &.re_input_point_1{
+        &.game-point_1{
           right: 4px;
           top: calc(~ "87% - 15px");
         }
-        &.re_log_event{
+        &.log-event-point_1{
           top: calc(~ "87% - 10px");
           left: 4px;
         }
       }
-      .wid_point {
+      .custom-green-circle-point {
         position: absolute;
         width: 10px;
         height: 10px;
         border-radius: 50%;
         background: #55ea55;
-        &.left-point{
+        &.widgest-point_1{
           right: 6px;
           top: calc(~ "35% - 5px");
         }
