perf: optimise entity relationship layout

--- a/example/demo/entityRelationship/index.less
+++ b/example/demo/entityRelationship/index.less
@@ -33,7 +33,7 @@
     background-color: #fe8550;
   }
 
-  .pink{
+  .pink {
     background-color: #fca079
   }
 
@@ -104,6 +104,7 @@
 
   .triangle-text {
     font-size: 20px;
+    top: 40%;
   }
 
   .label {
