--- a/example/demo/diodes/index.less
+++ b/example/demo/diodes/index.less
@@ -1,6 +1,16 @@
 .diodes-page {
   width: 100%;
   height: 100%;
+  .undo-btn {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+  .redo-btn {
+    position: absolute;
+    top: 10px;
+    left: 60px;
+  }
   .diodes-canvas {
     width: 100%;
     height: 100%;
