--- a/example/demo/relationalBooks/index.less
+++ b/example/demo/relationalBooks/index.less
@@ -8,6 +8,8 @@
     right: 30px !important;
   }
   .flow-canvas {
+    width: 100%;
+    height: 100%;
     .butterfly-wrapper {
       .base-node {
         width: 200px;
@@ -86,6 +88,7 @@
           padding: 8px;
           justify-content: space-between;
           border: 1px solid #ccc;
+          background: #fff;
           p {
             textarea {
               min-height: 80px;
