fix: relationbooks static

--- a/example/demo/relationalBooks/index.less
+++ b/example/demo/relationalBooks/index.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  padding-bottom: 30px;
+  padding: 20px 0;
   .butterfly-minimap-container {
     top: 30px;
     right: 30px !important;
@@ -58,7 +58,6 @@
       .group-node {
         width: 200px;
         position: absolute;
-        margin-bottom: 50px;
         .title {
           line-height: 32px;
           height: 32px;
