--- a/example/demo/relationalNetwork/index.less
+++ b/example/demo/relationalNetwork/index.less
@@ -2,6 +2,10 @@
   width: 100%;
   height: 100%;
   position: relative;
+  .flow-canvas {
+    width: 100%;
+    height: 100%;
+  }
   .point {
     position: absolute;
     width: 8px;
