fix: 类型相同导致样式污染

--- a/example/demo/flow-new/index.less
+++ b/example/demo/flow-new/index.less
@@ -1,7 +1,7 @@
 .flow-page-new {
   height: 100%;
   width: 100%;
-  .flow-canvas{
+  .flow-canvas-new{
     position: relative;
     height: 100%;
     width: 100%;
