--- a/example/demo/schedule/index.less
+++ b/example/demo/schedule/index.less
@@ -1,7 +1,7 @@
-.schedule-new {
+.schedule {
   width: 100%;
   height: 100%;
-  .schedule-new-canvas {
+  .schedule-canvas {
     width: 100%;
     height: 100%;
   }
