fix: 修复样式污染

--- a/example/demo/emergency-new/index.less
+++ b/example/demo/emergency-new/index.less
@@ -5,8 +5,13 @@
     width: 100%;
     height: 100%;
   }
-  .base-node {
+  .emergency-new-base-node {
     position: absolute;
+    text-align: center;
+    background: #fff;
+    vertical-align: middle;
+    border-radius: 5px;
+    line-height: 28px;
     .top{
       top: -3px;
       left: -3%;
