--- a/example/demo/emergency/index.less
+++ b/example/demo/emergency/index.less
@@ -8,8 +8,12 @@
   .butterflies-link {
     stroke-width: 2px;
   }
-  .base-node {
+  .emergency-base-node {
     position: absolute;
+    text-align: center;
+    background: #fff;
+    vertical-align: middle;
+    border-radius: 5px;
     .top{
       top: -3px;
       left: -3%;
