--- a/example/demo/entityRelationship-new/index.less
+++ b/example/demo/entityRelationship-new/index.less
@@ -7,6 +7,14 @@
     height: 100%;
   }
 
+  .entity-new-base-node {
+    position: absolute;
+    text-align: center;
+    background: #fff;
+    vertical-align: middle;
+    border-radius: 5px;
+  }
+
   .butterflies-link {
     stroke-width: 2px;
   }
