--- a/example/demo/relationalBooks/index.less
+++ b/example/demo/relationalBooks/index.less
@@ -14,9 +14,15 @@
       stroke-width: 3px;
     }
     .butterfly-wrapper {
-      .base-node {
+      .relational-book-base-node {
         width: 200px;
         position: absolute;
+        height: 32px;
+        line-height: 28px;
+        text-align: center;
+        background: #fff;
+        vertical-align: middle;
+        border-radius: 5px;
         .title {
           line-height: 32px;
           height: 32px;
