--- a/example/demo/system/index.less
+++ b/example/demo/system/index.less
@@ -15,10 +15,15 @@
         background: #fff;
       }
     }
-    .base-node {
+    .system-base-node {
+      position: absolute;
       padding: 0;
       border-width: 3px;
       border-color: #f4b871;
+      text-align: center;
+      background: #fff;
+      vertical-align: middle;
+      border-radius: 5px;
     }
     .base-link {
       stroke: #4b4f6b;
