--- a/example/demo/diodes/index.less
+++ b/example/demo/diodes/index.less
@@ -4,12 +4,14 @@
   .diodes-canvas {
     width: 100%;
     height: 100%;
-    .base-node {
+    .diodes-base-node {
       position: absolute;
       padding: 0;
       width: 100px;
       height: 45px;
-      background: none;
+      text-align: center;
+      vertical-align: middle;
+      border-radius: 5px;
       &:hover {
         border: none;  
       }
