--- a/example/demo/flow/index.less
+++ b/example/demo/flow/index.less
@@ -1,7 +1,7 @@
-.flow-page-new {
+.flow-page {
   height: 100%;
   width: 100%;
-  .flow-canvas-new{
+  .flow-canvas {
     position: relative;
     height: 100%;
     width: 100%;
