--- a/example/demo/flow/node.less
+++ b/example/demo/flow/node.less
@@ -1,4 +1,4 @@
-.flow-base-node-new {
+.flow-base-node {
   position: absolute;
   width: 88px;
   height: 88px;
@@ -8,7 +8,7 @@
   border: 1px solid #D9D9D9;
   box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
   border-radius: 8px;
-  .logo-container { 
+  .logo-containe { 
     width: 30px;
     height: 30px;
     background: #597EF7;
