--- a/example/demo/industry/index.less
+++ b/example/demo/industry/index.less
@@ -1,7 +1,7 @@
-.alcohol-page-new {
+.industry-page{
   height: 100%;
   width: 100%;
-  .alcohol-canvas{
+  .industry-canvas {
     position: relative;
     height: 100%;
     width: 100%;
