--- a/example/demo/analysis/index.less
+++ b/example/demo/analysis/index.less
@@ -1,7 +1,7 @@
-.analysis-new {
+.analysis {
   width: 100%;
   height: 100%;
-  .analysis-new-canvas {
+  .analysis-canvas {
     width: 100%;
     height: 100%;
   }
