--- a/example/demo/compact-box-tree/index.less
+++ b/example/demo/compact-box-tree/index.less
@@ -1,7 +1,7 @@
-.compactBoxTree-page {
+.compact-box-tree-page {
   width: 100%;
   height: 100%;
-  .compactBoxTree-canvas {
+  .compact-box-tree-canvas {
     width: 100%;
     height: 100%;
   }
