--- a/example/demo/decision/index.less
+++ b/example/demo/decision/index.less
@@ -1,7 +1,7 @@
-.decision-new {
+.decision {
   width: 100%;
   height: 100%;
-  .decision-new-canvas {
+  .decision-canvas {
     width: 100%;
     height: 100%;
   }
