--- a/example/demo/emergency2/index.less
+++ b/example/demo/emergency2/index.less
@@ -1,11 +1,11 @@
-.emergency-page-new {
+.emergency2-page {
   width: 100%;
   height: 100%;
-  .emergency-canvas {
+  .emergency2-canvas {
     width: 100%;
     height: 100%;
   }
-  .emergency-new-base-node {
+  .emergency2-base-node {
     position: absolute;
     text-align: center;
     background: #fff;
