--- a/example/demo/login/index.less
+++ b/example/demo/login/index.less
@@ -1,7 +1,7 @@
-.login-new {
+.login {
   width: 100%;
   height: 100%;
-  .login-new-canvas {
+  .login-canvas {
     width: 100%;
     height: 100%;
   }
