feat: change drage demo

--- a/example/demo/drageLayout/index.less
+++ b/example/demo/drageLayout/index.less
@@ -22,4 +22,29 @@
     top: 300px;
     left: 500px;
   }
+  .operate-bar{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 999;
+    box-shadow:2px 2px 5px #333333;
+    padding: 10px;
+    background-color: #ffffff;
+    .operate-bar-title{
+      height: 30px;
+      width: 100%;
+      line-height: 30px;
+      text-align: center;
+      background-color: rgb(198, 229, 255);
+      margin-bottom: 10px;
+    }
+    .operate-item{
+      margin-bottom: 10px;
+      .operate-node{
+        margin-right: 10px;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
