--- a/example/demo/drageLayout/base_node.less
+++ b/example/demo/drageLayout/base_node.less
@@ -1,14 +1,14 @@
-.flow-canvas {
+.drageLayout-page {
   .relation-node {
     position: absolute;
-    width: 65px;
-    height: 65px;
+    width: 140px;
+    height: 50px;
     padding: 0;
-    border-radius: 50%;
-    border: none;
+    border-radius: 10px;
+    border: 5px solid #5b8ff9;
     cursor: pointer;
     &:hover {
-      border: 5px solid #00C1DE;
+      border: 5px solid #d9d9d9;
       .datac-icon {
         line-height: 52px;
       }
@@ -18,9 +18,8 @@
     width: 100%;
     height: 100%;
     border: none;
-    line-height: 28px;
+    line-height: 40px;
     text-align: center;
-    border-radius: 50%;
     margin: auto;
   }
   .datac-icon {
