fix: update circle style

--- a/example/demo/circle/group.less
+++ b/example/demo/circle/group.less
@@ -9,12 +9,11 @@
     pointer-events: auto!important;
     overflow: visible!important;
     .group-title-path {
-      stroke-width: 1px;
       fill: #000;
     }
     .group-container-path {
       stroke-width: 1px;
-      fill: rgba(0, 0, 0, 0.3);
+      fill: #f0f0f0;
     }
   }
 }
