--- a/example/demo/circle/node.less
+++ b/example/demo/circle/node.less
@@ -17,6 +17,36 @@
       -webkit-transform-origin: 7.5px 7.5px;
       -moz-transform-origin: 7.5px 7.5px;
       -o-transform-origin: 7.5px 7.5px;
+      color: #333;
     }
+  }
+}
+.decision-node {
+  padding: 0 10px;
+  background: #FA541C;
+  color: #FFF;
+  min-width: 116px;
+  .text-box {
+    width: 100%;
+  }
+  .arrow-left {
+    position: absolute;
+    left: -36px;
+    top: 10px;
+    width: 0; 
+    height: 0;
+    border-width: 8px;
+    border-style: solid;
+    border-color:  transparent #666666 transparent transparent ;
+  }
+  .arrow-right {
+    position: absolute;
+    right: -36px;
+    top: 10px;
+    width: 0; 
+    height: 0;
+    border-width: 8px;
+    border-style: solid;
+    border-color:  transparent transparent transparent #666666 ;
   }
 }
