--- a/example/demo/circle/edge.less
+++ b/example/demo/circle/edge.less
@@ -1,3 +1,9 @@
+.butterflies-link {
+    fill: none;
+    stroke: #cecece;
+    stroke-width: 1px;
+    stroke-dasharray: 5, 5;
+  }
 .orange-dash-path {
     stroke: #f7c64c;
     stroke-width: 1px;
