--- a/example/demo/circle/node.less
+++ b/example/demo/circle/node.less
@@ -5,6 +5,7 @@
     height: 12px;
     background: #BFBFBF;
     border-radius: 50%;
+    cursor: pointer;
     &.circle-node-bg {
       background: #FA6400;
       &::before {
@@ -31,6 +32,28 @@
       -moz-transform-origin: 7.5px 7.5px;
       -o-transform-origin: 7.5px 7.5px;
       color: #333;
+      padding: 10px 8px;
+      box-sizing: border-box;
+    }
+    .circle-node-text-border {
+      border: 1px solid #FF6A00;
+      border-radius: 20px;
+      background: rgba(255, 106, 0, 0.15);
+    }
+    .popup-node {
+      position: absolute;
+      width: 339px;
+      height: auto;
+      padding: 14px;
+      background: #FFF;
+      border-left: 6px solid #A4A4A4;
+      z-index: 1;
+      .popup-node-title {
+        font-size: 16px;
+        margin-bottom: 16px;
+        margin-left: 11px;
+        font-style: normal;
+      }
     }
     .circle-node-text-color {
       color: #FA6400;
@@ -67,20 +90,22 @@
   }
   .note-target-node {
     position: absolute;
-    width: 5px;
-    height: 5px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
-    border: 1px solid #999;
+    border: 1px solid #cecece;
+    background: #f9f9f9;
     .note-text {
       position: absolute;
       display: inline-block;
       width: 150px;
       top: -10px;
+      color: #333;
       &.left-side {
-        right: -15px;
+        right: -6px;
       }
       &.right-side {
-        left: 15px;
+        left: 27px;
       }
     }
   }
