docs: 完善文档 & demo

--- a/example/index.less
+++ b/example/index.less
@@ -19,7 +19,7 @@ html, body {
     overflow-y: auto;
   }
 
-  .header {
+  .header.ant-layout-header {
     background-color: #212528;
     color: #fff;
     height: 50px;
