type: name replace

--- a/react/index.less
+++ b/react/index.less
@@ -1,4 +1,4 @@
-.react-butterfly {
+.butterfly-react {
   min-height: 500px;
   min-width: 500px;
   width: 100%;
@@ -6,7 +6,7 @@
   display: block;
   position: relative;
 
-  .react-butterfly-container {
+  .butterfly-react-container {
     height: 100%;
     width: 100%;
     position: absolute;
