--- a/example/demo/analysis/index.less
+++ b/example/demo/analysis/index.less
@@ -9,8 +9,18 @@
   .label {
     position: absolute;
     font-size: 20px;
+    background: none;
+    border: none;
+    box-shadow: none;
+    line-height: 23px;
+    color: @butterfly-line-color;
+  }
+  .label:hover {
+    background: none;
+    border: none;
+    color: @butterfly-primary-color;
   }
   .rotate-down {
-    transform: rotate(180deg);
+    transform: rotate(90deg);
   }
 }
