--- a/example/demo/compact-box-tree/node.less
+++ b/example/demo/compact-box-tree/node.less
@@ -5,17 +5,17 @@
   .title {
     height: 28px;
     line-height: 28px;
-    color: #fff;
+    color: @butterfly-overlay-font-color;
     padding: 0 5px;
     border-radius: 8.04px 8.04px 0 0;
     &.purple {
-      background: #9254DE
+      background: @butterfly-primary-color
     }
     &.blue {
-      background: #40A9FF;
+      background: @butterfly-primary-color;
     }
     &.drak-blue {
-      background: #597EF7;
+      background: @butterfly-primary-color;
     }
     .icon-class {
       vertical-align: bottom;
@@ -40,8 +40,14 @@
     width: 20px;
     line-height: 8px;
     text-align: center;
-    border-radius: 30%;
-    background: #fff;
+    border-radius: 4px;
+    border:@butterfly-box-border;
+    box-shadow:@butterfly-box-shadow;
+    background: @butterfly-theme-color;
     cursor: pointer;
+  }
+  .expand-btn:hover{
+    border:@butterfly-box-node-border-hover;
+    border-radius: 5px;
   }
 }
