--- a/example/demo/flow/index.less
+++ b/example/demo/flow/index.less
@@ -9,14 +9,24 @@
   .label {
     position: absolute;
     font-size: 20px;
+    background: none;
+    border: none;
+    box-shadow: none;
+    line-height: 23px;
+    color: @butterfly-line-color;
+  }
+  .label:hover {
+    background: none;
+    border: none;
+    color: @butterfly-primary-color;
   }
   .rotate-left {
-    transform: rotate(-90deg);
-  }
-  .rotate-down {
     transform: rotate(180deg);
   }
-  .rotate-right {
+  .rotate-down {
     transform: rotate(90deg);
+  }
+  .rotate-right {
+    transform: rotate(0deg);
   }
 }
