--- a/example/demo/analysis/node.less
+++ b/example/demo/analysis/node.less
@@ -4,20 +4,20 @@
   width: 116;
   line-height: 36px;
   text-align: center;
-  background: #fff;
+  background: @butterfly-theme-color;
   border-radius: 51px;
-  border: 1px solid #D9D9D9;
-  box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
+  border: @butterfly-box-border;
+  box-shadow: @butterfly-box-shadow;
   .icon-box {
     display: inline-block;
     height: 30px;
     line-height: 30px;
     width: 30px;
-    border-radius: 15px;
+    border-radius: @butterfly-box-radius;
     position: relative;
     left: 2px;
     .iconfont {
-      color: #fff;
+      color: @butterfly-overlay-font-color;
     }
   }
   .text-box {
@@ -28,24 +28,15 @@
     line-height: 30px;
     font-size: 12px;
   }
-  .simple-blue {
-    background: #40A9FF;
-  }
-  .deep-blue {
-    background: #597EF7;
-  }
-  .purple {
-    background: #9254DE;
-  }
 }
 .analysis-circle-base-node {
   position: absolute;
-  background: #FFFFFF;
-  border: 1px solid #D9D9D9;
-  box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
+  background: @butterfly-theme-color;
+  border: @butterfly-box-border;
+  box-shadow: @butterfly-box-shadow;
   width: 42px;
   height: 42px;
-  border-radius: 50%;
+  border-radius: @butterfly-box-radius;
   line-height: 42px;
   text-align: center;
 }
