--- a/example/demo/concent-layout/node.less
+++ b/example/demo/concent-layout/node.less
@@ -4,26 +4,29 @@
   width: 60px;
   line-height: 60px;
   text-align: center;
-  background: #fff;
-  border-radius: 50%;
-  border: 1px solid #D9D9D9;
-  box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
-  // .icon-box {
-  //   display: inline-block;
-  //   height: 30px;
-  //   line-height: 30px;
-  //   width: 30px;
-  //   border-radius: 15px;
-  //   position: relative;
-  //   left: 2px;
-  //   .iconfont {
-  //     color: #f00;
-  //   }
-  // }
-  .name-box {
+  background: @butterfly-theme-color;
+  border-radius:@butterfly-box-radius;
+  border: @butterfly-box-border;
+  box-shadow: @butterfly-box-shadow;
+  .icon-box {
     display: inline-block;
+    height: 24px;
+    line-height: 24px;
+    width: 24px;
+    border-radius: 12px;
+    position: relative;
+    left: 2px;
+    .newIconfont {
+      color: @butterfly-overlay-font-color;
+    }
+  }
+  .icon-background{
+    background: @butterfly-primary-color;
+  }
+  .name-box {
+    display: block;
     height: 60px;
-    line-height: 60px;
+    line-height: 18px;
     font-size: 12px;
     text-align: center;
   }
