--- a/example/demo/decision/index.less
+++ b/example/demo/decision/index.less
@@ -10,8 +10,8 @@
     position: absolute;
     width: 38px;
     height: 22px;
-    background: #EBEBEB;
+    background: @butterfly-theme-color;
     text-align: center;
-    border-radius: 100px;
+    border-radius: @butterfly-connect-node-radius;
   }
 }
