--- a/example/demo/drageLayout/base_node.less
+++ b/example/demo/drageLayout/base_node.less
@@ -1,32 +1,40 @@
+
 .drageLayout-page {
   .relation-node {
     position: absolute;
     width: 140px;
-    height: 50px;
+    height: 36px;
     padding: 0;
-    border-radius: 10px;
-    border: 5px solid #5b8ff9;
+    box-shadow:@butterfly-box-shadow;
+    border-radius: @butterfly-box-radius;
+    border:@butterfly-box-border;
     cursor: pointer;
     &:hover {
-      border: 5px solid #d9d9d9;
+      border: @butterfly-box-node-border-hover;
       .datac-icon {
         line-height: 52px;
       }
     }
+    .logo-container { 
+      width: 100%;
+      height: 100%;
+      border: none;
+      line-height: 36px;
+      text-align: center;
+      margin: auto;
+      display: inherit;
+      background: none;
+    }
   }
-  .logo-container { 
-    width: 100%;
-    height: 100%;
-    border: none;
-    line-height: 40px;
-    text-align: center;
-    margin: auto;
-  }
+
   .datac-icon {
     font-size: 35px;
     line-height: 60px;
   }
   .long-text {
     text-align: center;
+  }
+  .nodeBackground-color{
+    background-color: @butterfly-theme-color;
   }
 }
