--- a/example/demo/emergency/index.less
+++ b/example/demo/emergency/index.less
@@ -6,12 +6,12 @@
     height: 100%;
   }
   .butterflies-link {
-    stroke-width: 2px;
+    stroke-width: 1px;
   }
   .emergency-base-node {
     position: absolute;
     text-align: center;
-    background: #fff;
+    background: @butterfly-theme-color;
     vertical-align: middle;
     border-radius: 5px;
     .top{
@@ -32,27 +32,28 @@
     }
   }
   .orange {
-    border-width: 2px;
+    border-width: 1px;
     border-color: #ef8b5b;
-    color: #ef8b5b;
+    color: @butterfly-normal-font-color;
     stroke: #ef8b5b;
+    line-height: 33px;
   }
   .green {
-    border-width: 2px;
+    border-width: 1px;
     border-color: #66cdc5;
-    color: #66cdc5;
+    color: @butterfly-normal-font-color;
     stroke: #66cdc5;
   }
   .black {
-    border-width: 2px;
+    border-width: 1px;
     border-color: #8f8f8f;
-    color: #8f8f8f;
+    color: @butterfly-normal-font-color;
     stroke: #8f8f8f;
   }
   .purple {
-    border-width: 2px;
+    border-width: 1px;
     border-color: #776ef3;
-    color: #776ef3;
+    color: @butterfly-normal-font-color;
     stroke: #776ef3;
   }
   .circle {
@@ -97,7 +98,7 @@
     border-radius: 50%;
     color: #776ef3;
     padding: 4px;
-    background: #fff;
+    background: @butterfly-theme-color;
     text-align: center;
   }
 }
