--- a/example/demo/emergency2/index.less
+++ b/example/demo/emergency2/index.less
@@ -8,10 +8,11 @@
   .emergency2-base-node {
     position: absolute;
     text-align: center;
-    background: #fff;
+    background: @butterfly-theme-color;
     vertical-align: middle;
     border-radius: 5px;
     line-height: 28px;
+    color: @butterfly-normal-font-color;
     .top{
       top: -3px;
       left: -3%;
@@ -28,8 +29,8 @@
       bottom: -3px;
       left: -3px;
     }
-    border: 1px solid #D9D9D9;
-    box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
+    border: @butterfly-box-border;
+    box-shadow: @butterfly-box-shadow;
   }
   .rect {
     border-radius: 80px;
@@ -56,9 +57,9 @@
     width: 30px;
     height: 18px;
     line-height: 18px;
-    color: #333333;
+    color: @butterfly-normal-font-color;
     text-align: center;
-    background: #EBEBEB;
+    background: @butterfly-theme-color;
     border-radius: 80px;
   }
 }
