--- a/example/demo/entity-relationship/index.less
+++ b/example/demo/entity-relationship/index.less
@@ -10,31 +10,34 @@
   .entity-base-node {
     position: absolute;
     text-align: center;
-    background: #fff;
+    background: @butterfly-theme-color;
     vertical-align: middle;
     border-radius: 5px;
+    line-height: 3;
   }
 
   .butterflies-link {
     stroke-width: 2px;
   }
-
-  .green {
-    background-color: #31d0c6;
-    border: 0;
+  .box-background-color{
+    background-color: @butterfly-primary-color;
   }
+  // .green {
+  //   background-color: #31d0c6;
+  //   border: 0;
+  // }
 
-  .yellow {
-    background-color: #FFA940;
-  }
+  // .yellow {
+  //   background-color: #FFA940;
+  // }
 
-  .orange {
-    background-color: #FFA940;
-  }
+  // .orange {
+  //   background-color: #FFA940;
+  // }
 
-  .pink {
-    background-color: #fca079
-  }
+  // .pink {
+  //   background-color: #fca079
+  // }
 
   .circle {
     width: 80px;
@@ -45,13 +48,14 @@
   .diamond {
     .text {
       font-size: 14px;
-      color: #333333;
+      color: @butterfly-normal-font-color;
       text-align: center;
     }
     width: 70px;
     height: 70px;
     transform: rotate(45deg);
     border-radius: 0px;
+    line-height: 5;
 
     .rotate {
       transform: rotate(-45deg) translateX(-3%) translateY(-72%);
@@ -95,7 +99,7 @@
   }
 
   .text {
-    color: #fff;
+    color: @butterfly-overlay-font-color;
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -114,14 +118,14 @@
   .triangle-text {
     font-size: 14px;
     top: 40%;
-    color: #333333;
+    color: @butterfly-normal-font-color;
   }
 
   .label {
     position: absolute;
     width: 38px;
     height: 22px;
-    background: #EBEBEB;
+    background: @butterfly-theme-color;
     text-align: center;
     border-radius: 100px;
   }
