--- a/example/demo/flow/node.less
+++ b/example/demo/flow/node.less
@@ -4,26 +4,26 @@
   height: 88px;
   padding: 5px;
   padding: 16px 0;
-  background: #FFFFFF;
-  border: 1px solid #D9D9D9;
-  box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
+  background: @butterfly-theme-color;
+  border: @butterfly-box-border;
+  box-shadow: @butterfly-box-shadow;
   border-radius: 8px;
   .logo-containe { 
     width: 30px;
     height: 30px;
-    background: #597EF7;
+    background:@butterfly-primary-color;
     line-height: 30px;
     text-align: center;
     border-radius: 50%;
     margin: auto;
     margin-bottom: 8px;
     .iconfont {
-      color: #fff;
+      color: @butterfly-overlay-font-color;
     }
   }
   .text {
     font-size: 12px;
-    color: #333333;
+    color: @butterfly-normal-font-color;
     text-align: center;
   }
 }
