--- a/example/demo/force/index.less
+++ b/example/demo/force/index.less
@@ -5,6 +5,6 @@
   .force-tree-canvas{
     height: 100%;
     width: 100%;
-    background: #fff;
+    background: @butterfly-theme-background-color;
   }
 }
