--- a/example/demo/fruchterman/index.less
+++ b/example/demo/fruchterman/index.less
@@ -5,7 +5,7 @@
     .fruchterman-tree-canvas{
       height: 100%;
       width: 100%;
-      background: #fff;
+      background: @butterfly-theme-background-color;
     }
     
 }
