--- a/example/demo/fruchterman/node.less
+++ b/example/demo/fruchterman/node.less
@@ -5,6 +5,7 @@
     line-height: 30px;
     text-align: center;
     border-radius: 50%;
-    border: 1px solid #999;
-    background: #C6E5Ff;
+    border: @butterfly-box-border;
+    color:@butterfly-overlay-font-color;
+    background-color: @butterfly-primary-color;
   }
