--- a/example/demo/grid/index.less
+++ b/example/demo/grid/index.less
@@ -5,6 +5,6 @@
     .grid-tree-canvas{
       height: 100%;
       width: 100%;
-      background: #fff;
+      background: @butterfly-theme-background-color;
     }
   }
