--- a/example/demo/industry/index.less
+++ b/example/demo/industry/index.less
@@ -5,6 +5,6 @@
     position: relative;
     height: 100%;
     width: 100%;
-    background: #ebeef1;
+    background: @butterfly-theme-background-color;
   }
 }
