--- a/example/demo/react/sample/index.less
+++ b/example/demo/react/sample/index.less
@@ -36,15 +36,20 @@
   .header {
     padding: 10px;
     width: 250px;
-    color: white;
+    color: @butterfly-overlay-font-color;
+    background-color: @butterfly-primary-color;
   }
 
   .content {
+    color:@butterfly-normal-font-color;
     padding: 10px;
-
+    .info{
+      .ant-input-sm {
+        height: 29px;
+      }
+    }
     .history {
       padding: 5px 0;
-      color: grey;
       font-size: 12px;
       border-top: 1px solid #eee;
       margin-top: 10px;
@@ -53,18 +58,22 @@
 }
 
 .label {
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.1);
-  border-radius: 10px;
+  width: 38px;
+  height: 22px;
+  background-color: @butterfly-theme-color;
+  box-shadow: @butterfly-box-shadow;
+  border-radius: @butterfly-connect-node-radius;
   cursor: pointer;
   z-index: 1;
   position: relative;
   outline: none;
-  border: none;
-  color: #f5bc21;
+  border: @butterfly-box-border;
+  color: @butterfly-normal-font-color;
   text-align: center;
-  line-height: 30px;
-  font-size: 25px;
+  line-height: 19px;
+  font-size: 12px;
+}
+.label:hover {
+  background: @butterfly-primary-color;
+  color: @butterfly-overlay-font-color;
 }
