--- a/example/demo/relationalBooks/index.less
+++ b/example/demo/relationalBooks/index.less
@@ -10,8 +10,8 @@
     width: 100%;
     height: 100%;
     .butterflies-link {
-      stroke: #c66767;
-      stroke-width: 3px;
+      stroke: @butterfly-line-color;
+      stroke-width: 1px;
     }
     .butterfly-wrapper {
       .relational-book-base-node {
@@ -20,7 +20,6 @@
         height: 32px;
         line-height: 28px;
         text-align: center;
-        background: #fff;
         vertical-align: middle;
         border-radius: 5px;
         .title {
@@ -29,7 +28,8 @@
           width: 100%;
           display: flex;
           justify-content: space-between;
-          background: #255c82;
+          background: @butterfly-primary-color;
+          border-radius: 15px 15px 0px 0px;
           padding: 0 8px;
           color: #fff;
           .remove {
@@ -42,13 +42,14 @@
         .content {
           height: 32px;
           width: 200px;
-          display: flex;
+          // display: flex;
           justify-content: space-between;
           align-items: center;
           padding: 0 8px;
-          background: #c7dbd2;
+          background: @butterfly-theme-color;
           border-bottom: 1px solid #000;
           position: relative;
+          cursor: pointer;
           .targetEndPoint{
             left: -3px;
             position: absolute;
@@ -58,6 +59,7 @@
             position: absolute;
           }
           .remove {
+            display: none;
             cursor: pointer;
           }
           .text {
@@ -69,6 +71,22 @@
             }
           }
           .edit {
+            display: none;
+            cursor: pointer;
+          }
+        }
+        .content:last-child {
+          border-radius: 0px 0px 15px 15px;
+        }
+        .content:hover {
+          display: flex;
+          background: @butterfly-box-move-background-color;
+          .remove {
+            display : contents;
+            cursor: pointer;
+          }
+          .edit {
+            display : contents;
             cursor: pointer;
           }
         }
@@ -82,7 +100,7 @@
           width: 100%;
           display: flex;
           justify-content: space-between;
-          background: #146297;;
+          background: @butterfly-primary-color;
           padding: 0 8px;
           color: #fff;
           .title-text {
