--- a/example/demo/system/index.less
+++ b/example/demo/system/index.less
@@ -11,14 +11,14 @@
         width: 100%;
         height: 100%;
         border-radius: 5px;
-        border: 3px solid #66cdc5;
+        border: 1px solid #66cdc5;
         background: #fff;
       }
     }
     .system-base-node {
       position: absolute;
       padding: 0;
-      border-width: 3px;
+      border-width: 1px;
       border-color: #f4b871;
       text-align: center;
       background: #fff;
@@ -27,7 +27,7 @@
     }
     .base-link {
       stroke: #4b4f6b;
-      stroke-width: 3px;
+      stroke-width: 1px;
     }
     .group {
       > .text {
@@ -40,8 +40,11 @@
     .label {
       position: absolute;
       color: #776ef3;
-      font-size: 16px;
-      font-weight: 900;
+      font-size: 12px;
+    }
+    .label:hover {
+      background: @butterfly-primary-color;
+      color: @butterfly-overlay-font-color;
     }
     .text {
       display: inline-block;
@@ -57,10 +60,10 @@
       border-style: solid;
     }
     .purple-point {
-      border: 2px solid #fff;
+      border: 1px solid #fff;
       background: #776ef3;
-      width: 17px;
-      height: 17px;
+      width: 10px;
+      height: 10px;
     }
   }
 }
