feat: 颜色样式修改

--- a/example/demo/analysis/node.less
+++ b/example/demo/analysis/node.less
@@ -8,6 +8,7 @@
   border-radius: 51px;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color:@butterfly-normal-font-color;
   .icon-box {
     display: inline-block;
     height: 30px;
@@ -34,6 +35,7 @@
   background: @butterfly-theme-color;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color: @butterfly-normal-font-color;
   width: 42px;
   height: 42px;
   border-radius: @butterfly-box-radius;
