--- a/example/demo/compact-box-tree/node.less
+++ b/example/demo/compact-box-tree/node.less
@@ -8,15 +8,8 @@
     color: @butterfly-overlay-font-color;
     padding: 0 5px;
     border-radius: 8.04px 8.04px 0 0;
-    &.purple {
-      background: @butterfly-primary-color
-    }
-    &.blue {
-      background: @butterfly-primary-color;
-    }
-    &.drak-blue {
-      background: @butterfly-primary-color;
-    }
+    border:@butterfly-box-border;
+    background: @butterfly-primary-color;
     .icon-class {
       vertical-align: bottom;
       margin-right: 5px;
@@ -26,10 +19,11 @@
     height: 32px;
     line-height: 32px;
     padding: 0 8px;
-    background: #fff;
+    border:@butterfly-box-border;
+    background: @butterfly-theme-color;
     border-radius: 0 0 8.04px 8.04px;
     font-size: 12px;
-    color: #333333;
+    color: @butterfly-normal-font-color;
     text-align: center;
   }
   .expand-btn {
