--- a/example/demo/concent-layout/node.less
+++ b/example/demo/concent-layout/node.less
@@ -8,6 +8,7 @@
   border-radius:@butterfly-box-radius;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color: @butterfly-normal-font-color;
   .icon-box {
     display: inline-block;
     height: 24px;
@@ -29,32 +30,5 @@
     line-height: 18px;
     font-size: 12px;
     text-align: center;
-  }
-  .green {
-    background: #73D13D;
-  }
-  .simple-blue {
-    background: #40A9FF;
-  }
-  .deep-blue {
-    background: #597EF7;
-  }
-  .orange {
-    background: #FFA940;
-  }
-  .simple-yellow {
-    background: #FFC53D;
-  }
-  .gray {
-    background: #909090;
-  }
-  .deep-green {
-    background: #36CFC9;
-  }
-  .purple {
-    background: #9254DE;
-  }
-  .pink {
-    background: #F759AB;
   }
 }
