--- a/example/demo/emergency/index.less
+++ b/example/demo/emergency/index.less
@@ -96,7 +96,7 @@
     height: 28px;
     border: 1px solid #776ef3;
     border-radius: 50%;
-    color: #776ef3;
+    color: @butterfly-normal-font-color;
     padding: 4px;
     background: @butterfly-theme-color;
     text-align: center;
