--- a/example/demo/entity-relationship/index.less
+++ b/example/demo/entity-relationship/index.less
@@ -17,27 +17,11 @@
   }
 
   .butterflies-link {
-    stroke-width: 2px;
+    stroke-width: 1px;
   }
   .box-background-color{
     background-color: @butterfly-primary-color;
   }
-  // .green {
-  //   background-color: #31d0c6;
-  //   border: 0;
-  // }
-
-  // .yellow {
-  //   background-color: #FFA940;
-  // }
-
-  // .orange {
-  //   background-color: #FFA940;
-  // }
-
-  // .pink {
-  //   background-color: #fca079
-  // }
 
   .circle {
     width: 80px;
@@ -56,7 +40,7 @@
     transform: rotate(45deg);
     border-radius: 0px;
     line-height: 5;
-
+    background-color: @butterfly-theme-color;
     .rotate {
       transform: rotate(-45deg) translateX(-3%) translateY(-72%);
     }
