--- a/example/demo/industry/node.less
+++ b/example/demo/industry/node.less
@@ -9,6 +9,7 @@
   height: 100px;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color:@butterfly-normal-font-color;
   cursor: pointer;
   &:hover {
     border: @butterfly-box-node-border-hover;
