--- a/example/demo/relationalNetwork/base_node.less
+++ b/example/demo/relationalNetwork/base_node.less
@@ -2,7 +2,7 @@
   .relation-node {
     position: absolute;
     text-align: center;
-    line-height: 50px;
+    line-height: 65px;
     width: 65px;
     height: 65px;
     padding: 0;
@@ -37,7 +37,7 @@
     height: 22px;
     background-color: @butterfly-theme-color;
     box-shadow: @butterfly-box-shadow;
-    border-radius: @butterfly-connect-node-radius;
+    border-radius: @butterfly-box-radius;
     cursor: pointer;
     z-index: 1;
     outline: none;
@@ -53,6 +53,7 @@
   }
   .long-text {
     text-align: center;
+    margin-top: -23px;
   }
   .people {
 
