--- a/example/colorVariable.less
+++ b/example/colorVariable.less
@@ -2,7 +2,7 @@
 // 主题背景色（画布背景色）
 @butterfly-theme-background-color: @butterfly-theme-color-base;
 // （各图形框）普通情况背景色
-@butterfly-theme-color: fade(@butterfly-theme-color-base,80%);
+@butterfly-theme-color: fade(@butterfly-theme-color-base,30%);
 // 主题色
 @butterfly-primary-color: @butterfly-primary-color-base;
 // 普通情况下字体颜色
@@ -11,15 +11,10 @@
 @butterfly-overlay-font-color: @butterfly-overlay-font-color-base;
 // 拖动时的背景色
 @butterfly-box-move-background-color: fade(@butterfly-primary-color, 20%);
-// 选中后的背景色
-@butterfly-box-drag-background-color: @butterfly-primary-color;
 // 边框的样式
-@butterfly-box-border: @butterfly-box-border-base;
+@butterfly-box-border: 1px solid @butterfly-box-border-color-base;
 @butterfly-box-shadow: @butterfly-box-shadow-base;
 @butterfly-box-radius: @butterfly-box-radius-base;
 @butterfly-box-node-border-hover: 1px solid @butterfly-primary-color;
 // 线条样式
 @butterfly-line-color: @butterfly-line-color-base;
-// 连接两边的框的样式
-@butterfly-connect-node-background-color: @butterfly-connect-node-background-base;
-@butterfly-connect-node-radius: @butterfly-connect-node-radius-base;
