--- a/example/defaultTheme.less
+++ b/example/defaultTheme.less
@@ -1,10 +1,8 @@
-@butterfly-theme-color-base:#FFFFFF;
-@butterfly-normal-font-color-base:#222222;;
-@butterfly-overlay-font-color-base:#FFFFFF;
+@butterfly-theme-color-base:#FFF;
+@butterfly-normal-font-color-base:#222;;
+@butterfly-overlay-font-color-base:#FFF;
 @butterfly-primary-color-base:#F66902;
-@butterfly-box-border-base:1px solid #D9D9D9;
+@butterfly-box-border-color-base: #D9D9D9;
 @butterfly-box-shadow-base:0 2px 3px 0 rgba(0,112,204,0.06);
 @butterfly-box-radius-base:100px;
 @butterfly-line-color-base: #BFBFBF;
-@butterfly-connect-node-background-base:#EBEBEB;
-@butterfly-connect-node-radius-base:100px;
