--- a/example/demo/concent-layout/center.less
+++ b/example/demo/concent-layout/center.less
@@ -9,6 +9,7 @@
   font-size: 12px;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color: @butterfly-normal-font-color;
   .icon-box {
     display: block;
     height: 24px;
