--- a/example/demo/decision/index.less
+++ b/example/demo/decision/index.less
@@ -12,6 +12,6 @@
     height: 22px;
     background: @butterfly-theme-color;
     text-align: center;
-    border-radius: @butterfly-connect-node-radius;
+    border-radius: @butterfly-box-radius;
   }
 }
