--- a/example/demo/decision/node.less
+++ b/example/demo/decision/node.less
@@ -6,8 +6,9 @@
   text-align: center;
   background: @butterfly-theme-color;
   border-radius: 100px;
-  border: @butterfly-box-border-base;
+  border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color:@butterfly-normal-font-color;
   .icon-box {
     display: inline-block;
     height: 30px;
