--- a/example/demo/indented-tree/node.less
+++ b/example/demo/indented-tree/node.less
@@ -2,10 +2,13 @@
   .rule-node {
     position: absolute;
     font-size: 12px;
+    color: @butterfly-normal-font-color;
     .rule-select {
       padding: 4px 2px;
       border-radius: 5px;
       border: @butterfly-box-border;
+      background-color: @butterfly-theme-color;
+      color: @butterfly-normal-font-color;
     }
     .rule-text {
       display: inline-block;
