--- a/example/demo/schedule/node.less
+++ b/example/demo/schedule/node.less
@@ -8,6 +8,7 @@
   border-radius: @butterfly-box-radius;
   border: @butterfly-box-border;
   box-shadow: @butterfly-box-shadow;
+  color: @butterfly-normal-font-color;
   .icon-box {
     display: inline-block;
     height: 30px;
