--- a/example/demo/system/index.less
+++ b/example/demo/system/index.less
@@ -12,7 +12,7 @@
         height: 100%;
         border-radius: 5px;
         border: 1px solid #66cdc5;
-        background: #fff;
+        background: @butterfly-theme-color;
       }
     }
     .system-base-node {
@@ -21,7 +21,7 @@
       border-width: 1px;
       border-color: #f4b871;
       text-align: center;
-      background: #fff;
+      background: @butterfly-theme-color;
       vertical-align: middle;
       border-radius: 5px;
     }
@@ -39,7 +39,7 @@
     }
     .label {
       position: absolute;
-      color: #776ef3;
+      color: @butterfly-normal-font-color;
       font-size: 12px;
     }
     .label:hover {
@@ -49,7 +49,7 @@
     .text {
       display: inline-block;
       text-align: center;
-      color: #f4b871;
+      color: @butterfly-normal-font-color;
       width: 100%;
       padding-top: 5px;
     }
