--- a/example/index.less
+++ b/example/index.less
@@ -11,6 +11,7 @@ html, body {
 
   .ant-layout, .ant-layout-content {
     height: 100%;
+    background-color: @butterfly-theme-background-color;
   }
 
   .menu {
